--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,10 @@
             <version>${spring-boot.version}</version>
             <scope>test</scope>
         </dependency>
+         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+         </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
